--- a/src/components/ContactMe/ContactMe.module.scss
+++ b/src/components/ContactMe/ContactMe.module.scss
@@ -1,4 +1,11 @@
+.container {
+  display: flex;
+  align-items: center;
+  height: calc(100vh);
+}
+
 .contactme {
+  flex: 1;
   display: flex;
   gap: 2rem;
   margin-top: 8rem;
