--- a/src/components/Stacks/StackIcon.module.scss
+++ b/src/components/Stacks/StackIcon.module.scss
@@ -7,16 +7,29 @@
   overflow: hidden;
   flex: 0 0 calc(20% - 16px);
 
-  h3, img {
+  h3, span {
     width: 100%;
     height: 100%;
   }
+
+  span {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    img {
+      aspect-ratio: 1 / 1;
+      height: auto;
+      width: 50%;
+    }
+  }
+
 
   h3 {
     display: flex;
     align-items: center;
     justify-content: center;
     font-size: 16px;
-    font-weight: 400;
+    font-weight: 600;
   }
 }
