--- a/src/components/Stacks/Stacks.module.scss
+++ b/src/components/Stacks/Stacks.module.scss
@@ -1,31 +1,31 @@
-.stacks {
-  display: flex;
-  gap: 2rem;
-  margin-top: 8rem;
-  position: relative;
+// .stacks {
+//   display: flex;
+//   gap: 2rem;
+//   margin-top: 8rem;
+//   position: relative;
 
-  &__title {
-    font-size: 2rem;
-    font-weight: 600;
-    width: 40%;
-    position: relative;
+//   &__title {
+//     font-size: 2rem;
+//     font-weight: 600;
+//     width: 40%;
+//     position: relative;
 
-    h3 {
-      position: sticky;
-      top: 0;
+//     h3 {
+//       position: sticky;
+//       top: 0;
 
-      span {
-        display: block;
-        font-size: 18px;
-        font-weight: 400;
-      }
-    }
-  }
+//       span {
+//         display: block;
+//         font-size: 18px;
+//         font-weight: 400;
+//       }
+//     }
+//   }
 
-  &__list {
+  .stacks__list {
     display: flex;
     flex: 1;
     gap: 1rem;
     flex-wrap: wrap;
   }
-}
+// }
