--- a/src/components/ContactMe/ContactMe.module.scss
+++ b/src/components/ContactMe/ContactMe.module.scss
@@ -5,22 +5,15 @@
 }
 
 .contactme {
-  flex: 1;
-  display: flex;
-  gap: 2rem;
+  display: block;
   margin-top: 8rem;
   position: relative;
+  flex: 1;
 
   &__title {
     font-size: 2rem;
     font-weight: 600;
-    width: 40%;
-    position: relative;
-    overflow: hidden;
-
-    // h3 {
-    //   position: fixed;
-    // }
+    margin-bottom: 2rem;
   }
 
   &__form {
@@ -34,6 +27,11 @@
       border: solid 2px #000;
       border-radius: 1rem;
       padding: 1rem 1.5rem;
+    
+      &:focus {
+        outline: none;
+        border-color: #939be6;
+      }
     }
 
     button {
@@ -44,6 +42,24 @@
       padding: 1rem 1.5rem;
       border-radius: 1rem;
       cursor: pointer;
+
+      &:disabled {
+        opacity: 0.5;
+        cursor: not-allowed;
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .contactme {
+    display: flex;
+    gap: 2rem;
+    margin-bottom: 0;
+
+    &__title {
+      font-size: 2rem;
+      width: 40%;
     }
   }
 }
