--- a/src/components/DynamicIsland/DynamicIsland.module.scss
+++ b/src/components/DynamicIsland/DynamicIsland.module.scss
@@ -1,11 +1,34 @@
 .dynamic-island {
-  width: fit-content;
-  padding: 0.5rem 2rem;
-  border-radius: 4rem;
   background-color: #F2F6D0;
-  color: #333;
+  border-radius: 4rem;
   border: solid 2px #000;
+  color: #333;
   font-weight: 600;
   font-size: 20px;
   margin: auto;
+  max-height: calc(32px + (2 * 0.5rem));
+  left: 50%;
+  overflow: hidden;
+  padding: 0.5rem 2rem;
+  position: fixed;
+  text-align: center;
+  top: 24px;
+  transform: translateX(-50%);
+  width: calc(100% - 4rem);
+  z-index: 11;
+
+  & > div {
+    display: flex;
+    & > span {
+      flex: 1 0 100%;
+      display: block;
+    }
+  }
+}
+
+
+@media screen and (min-width: 768px) {
+  .dynamic-island {
+    width: 20%;
+  }
 }
