--- a/src/components/Stacks/Stacks.module.scss
+++ b/src/components/Stacks/Stacks.module.scss
@@ -1,31 +1,13 @@
-// .stacks {
-//   display: flex;
-//   gap: 2rem;
-//   margin-top: 8rem;
-//   position: relative;
+.stacks__list {
+  display: flex;
+  flex: 1;
+  gap: 1rem;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
 
-//   &__title {
-//     font-size: 2rem;
-//     font-weight: 600;
-//     width: 40%;
-//     position: relative;
-
-//     h3 {
-//       position: sticky;
-//       top: 0;
-
-//       span {
-//         display: block;
-//         font-size: 18px;
-//         font-weight: 400;
-//       }
-//     }
-//   }
-
+@media screen and (min-width: 480px) {
   .stacks__list {
-    display: flex;
-    flex: 1;
-    gap: 1rem;
-    flex-wrap: wrap;
+    justify-content: left;
   }
-// }
+}
