--- a/src/components/Titles/Titles.module.scss
+++ b/src/components/Titles/Titles.module.scss
@@ -1,16 +1,53 @@
 .titles {
+  background-color: #fff;
   display: flex;
   overflow: hidden;
   position: sticky;
-  top: 32px;
+  top: 0;
   height: fit-content;
+  margin-left: -2rem;
+  padding-left: 2rem;
+  padding-top: 32px;
+  padding-bottom: 24px;
+  width: calc(100% + 4rem);
+  z-index: 9;
+
+  &__indicator {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 10px;
+    background-color: #ff0088,
+  }
+
+  &.shadow-on {
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
+  }
 
   h2 {
+    font-size: 2rem;
     flex: 1 0 100%;
-    font-size: 3rem;
     font-weight: 700;
     font-style: italic;
     word-wrap: break-word;
     width: 100%;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .titles {
+    top: 32px;
+    padding-top: 0;
+    width: auto;
+
+    &__indicator {
+      display: none;
+    }
+    
+    h2 {
+      font-size: 3rem;
+      z-index: 0;
+    }
   }
 }
