--- a/src/components/Working/Working.module.scss
+++ b/src/components/Working/Working.module.scss
@@ -1,16 +1,10 @@
 .working {
-  // display: flex;
-  // gap: 2rem;
-  // margin-top: 8rem;
-  // position: relative;
-
   &__title {
     font-size: 2rem;
     font-weight: 600;
-    // width: 40%;
     position: relative;
 
-    h3 {
+    h3 {  
       position: sticky;
       top: 0;
     }
@@ -30,12 +24,12 @@
       border: solid 2px;
 
       &--fulltime {
-        background-color: rgb(52, 212, 52);
+        background-color: #b6ffb6;
         border-color: #38a516;
       }
 
       &--others {
-        background-color: rgb(241, 152, 17);
+        background-color: #ffe9c8;
         border-color: #f57824;
       }
 
@@ -53,7 +47,7 @@
       display: flex;
       flex-direction: column;
       gap: 1rem;
-      flex-basis: calc(50% - 1rem);
+      flex-basis: 100%;
       border: solid 2px #000;
       border-radius: 1rem;
       padding: 1rem;
@@ -64,6 +58,27 @@
         display: flex;
         align-items: center;
         gap: 0.5rem;
+      }
+
+      button {
+        border: none;
+        background: unset;
+        text-decoration: underline;
+        display: inline-block;
+        margin-left: auto;
+        margin-top: auto;
+        cursor: pointer;
+        color: #1C03FF;
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 480px) {
+  .working {
+    &__list-working {
+      li {
+        flex-basis: calc(50% - 1rem);
       }
     }
   }
