--- a/src/components/DynamicIsland/DynamicIsland.module.scss
+++ b/src/components/DynamicIsland/DynamicIsland.module.scss
@@ -1,27 +1,57 @@
 .dynamic-island {
   background-color: #F2F6D0;
-  border-radius: 4rem;
+  border-radius: 2rem;
   border: solid 2px #000;
   color: #333;
   font-weight: 600;
   font-size: 20px;
   margin: auto;
-  max-height: calc(32px + (2 * 0.5rem));
   left: 50%;
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: hidden;
   padding: 0.5rem 2rem;
   position: fixed;
   text-align: center;
-  top: 24px;
+  bottom: calc(90% + 24px);
   transform: translateX(-50%);
   width: calc(100% - 4rem);
   z-index: 11;
 
-  & > div {
+  & > div:not(.dynamic-island__detail) {
     display: flex;
     & > span {
       flex: 1 0 100%;
       display: block;
+    }
+  }
+
+  &__detail {
+    padding: 1rem;
+
+    h3 {
+      font-size: 20px;
+      margin-bottom: 1rem;
+    }
+
+    ul > li {
+      list-style-type: "# ";
+      margin-bottom: 1rem;
+      font-size: 16px;
+    }
+
+    div {
+      border: solid 2px #000;
+      border-radius: 1rem;
+      margin-left: auto;
+      padding: 0.25rem 0.5rem;
+      width: fit-content;
+      font-size: 12px;
+      display: flex;
+      align-items: center;
+
+      svg {
+        font-size: 16px;
+      }
     }
   }
 }
