--- a/src/components/DynamicIsland/DynamicIsland.module.scss
+++ b/src/components/DynamicIsland/DynamicIsland.module.scss
@@ -15,7 +15,7 @@
   bottom: calc(90% + 24px);
   transform: translateX(-50%);
   width: calc(100% - 4rem);
-  z-index: 11;
+  z-index: 21;
 
   & > div:not(.dynamic-island__detail) {
     display: flex;
@@ -39,7 +39,7 @@
       font-size: 16px;
     }
 
-    div {
+    & > div {
       border: solid 2px #000;
       border-radius: 1rem;
       margin-left: auto;
@@ -48,6 +48,9 @@
       font-size: 12px;
       display: flex;
       align-items: center;
+      cursor: pointer;
+      overflow: hidden;
+      max-height: calc(20px + (2*4px));
 
       svg {
         font-size: 16px;
